<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
	
        <Button android:id="@+id/createButton" android:text="@string/create_class_caption"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
            android:soundEffectsEnabled="true" android:layout_gravity="center"/>
        
        <Button android:id="@+id/openButton" android:text="@string/open_class_caption"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginLeft="8dp" android:layout_marginTop="30dp"
            android:soundEffectsEnabled="true" android:layout_gravity="center" />     
        
        <Button android:id="@+id/editButton" android:text="@string/edit_class_caption"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginLeft="8dp" android:layout_marginTop="30dp"
            android:soundEffectsEnabled="true" android:layout_gravity="center"/>     
</LinearLayout>